--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,2 @@
-.center {text-align:center;
-  font-style: oblique
-}
-.color {
-  color: green;
-  background-color: darkred;}
+.center {text-align:center;font-style: oblique}
+.color {color: green;background-color: darkred;}
